--- a/src/components/HeaderLandingZh.astro
+++ b/src/components/HeaderLandingZh.astro
@@ -36,7 +36,7 @@ const links = [
         openInNewTab: false,
       },
       {
-        text: "人工智能愿景论坛",
+        text: "AI Vision Forum 人工智能愿景论坛",
         link: "https://forum.gosim.org",
         openInNewTab: false,
       },
