--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -115,7 +115,7 @@ import GosimParis from "images/homepage/gosim-paris-min.png";
     </div>
   </div>
 
-<Tracks
+  <Tracks
     id="tracks"
     title="Cutting-Edge Tracks, Workshops & Co-Located Events"
     tracksTitle="5 Tracks"
@@ -185,10 +185,6 @@ import GosimParis from "images/homepage/gosim-paris-min.png";
         text: "Leverage your React skills to build native iOS and Android applications with React Native.",
       },
       {
-        title: "Rust Workshop",
-        text: "Get hands-on experience with Rust, focusing on performance, reliability, and productivity.",
-      },
-      {
         title: "Makepad Workshop",
         text: "Learn to build fast, native-feeling UIs in Rust for web and desktop applications with Makepad.",
       },
@@ -199,6 +195,10 @@ import GosimParis from "images/homepage/gosim-paris-min.png";
       {
         title: "Solana for Rustaceans Workshop",
         text: "Build high-performance, decentralized applications on the Solana blockchain using Rust.",
+      },
+      {
+        title: "Open Source Globalization Workshop",
+        text: "Explore strategies for globalizing open source projects and effectively reaching international markets.",
       },
     ]}
     coLocatedEvents={[
@@ -220,7 +220,6 @@ import GosimParis from "images/homepage/gosim-paris-min.png";
       link: "/schedule",
     }}
   />
-
 
   <VenueInfo
     subtitle="Venue"
