--- a/src/pages/zh/index.astro
+++ b/src/pages/zh/index.astro
@@ -185,10 +185,6 @@ import GosimParis from "images/homepage/gosim-paris-min.png";
         text: "利用您的 React 技能，使用 React Native 构建原生的 iOS 和 Android 应用程序。",
       },
       {
-        title: "Rust 工作坊",
-        text: "亲身体验 Rust，专注于性能、可靠性和生产力。",
-      },
-      {
         title: "Makepad 工作坊",
         text: "学习使用 Makepad 在 Rust 中为 Web 和桌面应用程序构建快速、原生体验的 UI。",
       },
@@ -200,6 +196,10 @@ import GosimParis from "images/homepage/gosim-paris-min.png";
         title: "Solana for Rustaceans 工作坊",
         text: "使用 Rust 在 Solana 区块链上构建高性能的去中心化应用程序。",
       },
+      {
+        title: "开源出海工作坊",
+        text: "探索开源项目的全球化策略，了解如何有效地将您的项目推广到国际市场。",
+      },
     ]}
     coLocatedEvents={[
       {
@@ -207,7 +207,7 @@ import GosimParis from "images/homepage/gosim-paris-min.png";
         text: "一场汇聚全球开源、人工智能及政策领域专家的盛会，旨在通过开放协作与AI技术，共同为联合国可持续发展目标（SDG）的实现加速。",
       },
       {
-        title: "人工智能愿景论坛",
+        title: "AI Vision Forum 人工智能愿景论坛",
         text: "一场汇聚全球思想家与实践者的高端闭门论坛，旨在探索人工智能如何与人类价值共生，确保AI发展始终以人为本。",
       },
       {
@@ -283,7 +283,7 @@ import GosimParis from "images/homepage/gosim-paris-min.png";
         openInNewTab: false,
       },
       {
-        title: "人工智能愿景论坛",
+        title: "AI Vision Forum 人工智能愿景论坛",
         description:
           "一场汇聚全球思想家与实践者的高端闭门论坛，旨在探索人工智能如何与人类价值共生，确保AI发展始终以人为本。",
         image: "/images/homepage/co-located-ai-vision.png",
