--- a/src/pages/template.astro
+++ b/src/pages/template.astro
@@ -2,8 +2,8 @@
 import Layout from '../layouts/LayoutLanding.astro';
 import HeroText from "../components/HeroText.astro";
 ---
-<Layout title="PPT Template Download" navBackground="light" pageTransitionName="PPT">
-    <HeroText title="PPT Template Download" lightgray />
+<Layout title="PPT 模版下载 Template Download" navBackground="light" pageTransitionName="PPT">
+    <HeroText title="PPT 模版下载 Template Download" lightgray />
     <div style="padding: 4em; text-align: center;">
         <a 
             href="/GOSIM HANGZHOU 2025 模版 Template.pptx" 
@@ -21,7 +21,7 @@ import HeroText from "../components/HeroText.astro";
             onmouseover="this.style.backgroundColor='#0056b3'"
             onmouseout="this.style.backgroundColor='#007bff'"
         >
-            PPT Template Download
+            PPT 模版下载 Template Download
         </a>
     </div>
 </Layout>
