--- a/src/pages/zh/speakers/[...name].astro
+++ b/src/pages/zh/speakers/[...name].astro
@@ -4,7 +4,7 @@ import { Picture } from "astro:assets";
 import type { ImageMetadata } from "astro";
 
 // Components
-import Layout from "layouts/LayoutLanding.astro";
+import Layout from "layouts/LayoutLandingZh.astro";
 import speakers from "json/SpeakersZh.json";
 import schedule from "json/ScheduleBilingual.json";
 import scheduleForum from "json/Schedule-forum.json";
