updated footer, added location to event page

--- a/src/components/FooterLanding.astro
+++ b/src/components/FooterLanding.astro
@@ -28,6 +28,10 @@ const firstColumnLinks = [
 ]
 
 const secondColumnLinks = [
+  {
+    text: "Schedule",
+    link: "/schedule/",
+  },
   // {
   //   text: "Volunteer",
   //   link: "https://docs.google.com/forms/d/e/1FAIpQLSc62kJczw7lr-l0JAAbkabeIrrPPAD7OWyzwDopTD0L4HC6EQ/viewform",
