--- a/src/components/FooterLandingZh.astro
+++ b/src/components/FooterLandingZh.astro
@@ -28,16 +28,8 @@ const firstColumnLinks = [
 
 const secondColumnLinks = [
   {
-    text: "China Essentials",
-    link: "/zh/china-essentials/",
-  },
-  {
-    text: "General Travel Info",
-    link: "/zh/general-travel/",
-  },
-  {
-    text: "Chinese Visa",
-    link: "/zh/chinese-visa/",
+    text: "议题安排",
+    link: "/zh/schedule/",
   },
 ];
 
