added Adina Yakefu to SDG schedule

--- a/src/components/HeaderLandingZh.astro
+++ b/src/components/HeaderLandingZh.astro
@@ -41,7 +41,7 @@ const links = [
         openInNewTab: false,
       },
       {
-        text: "开放共创 · 可持续发展大会",
+        text: "Open for SDG 开放共创 · 可持续发展大会",
         link: "https://opensdg.gosim.org/cn/",
         openInNewTab: false,
       },
