--- a/src/pages/zh/index.astro
+++ b/src/pages/zh/index.astro
@@ -203,7 +203,7 @@ import GosimParis from "images/homepage/gosim-paris-min.png";
     ]}
     coLocatedEvents={[
       {
-        title: "开放共创 · 可持续发展大会",
+        title: "Open for SDG 开放共创 · 可持续发展大会",
         text: "一场汇聚全球开源、人工智能及政策领域专家的盛会，旨在通过开放协作与AI技术，共同为联合国可持续发展目标（SDG）的实现加速。",
       },
       {
@@ -291,7 +291,7 @@ import GosimParis from "images/homepage/gosim-paris-min.png";
         openInNewTab: false,
       },
       {
-        title: "开放共创 · 可持续发展大会",
+        title: "Open for SDG 开放共创 · 可持续发展大会",
         description:
           "一场汇聚全球开源、人工智能及政策领域专家的盛会，旨在通过开放协作与AI技术，共同为联合国可持续发展目标（SDG）的实现加速。",
         image: "/images/homepage/co-located-open-sdg.jpg",
