add GOSIM Workshop Shanghai 2023 link

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,33 +1,33 @@
 ---
 // Components
-import Layout from "layouts/LayoutLanding.astro";
-import Hero from "components/Hero.astro";
-import Intro from "components/Intro.astro";
-import Statistics from "components/Statistics.astro";
-import Tracks from "components/Tracks.astro";
-import TextAndImage from "components/TextAndImage.astro";
-import PreviousEvents from "components/PreviousEvents.astro";
-import GetTickets from "components/GetTickets.astro";
-import VenueInfo from "components/VenueInfo.astro";
-import TextAndSponsors from "components/TextAndSponsors.astro";
-import TextAndImageReverse from "components/TextAndImageReverse.astro";
-import FeaturedSpeakers from "components/FeaturedSpeakers.astro";
-import Timeline from "components/Timeline.astro";
-import Marquee from "components/Marquee.astro";
-import Cards from "components/Cards.astro";
-import CardsSponsors from "components/CardsSponsors.astro";
+import Layout from "layouts/LayoutLanding.astro"
+import Hero from "components/Hero.astro"
+import Intro from "components/Intro.astro"
+import Statistics from "components/Statistics.astro"
+import Tracks from "components/Tracks.astro"
+import TextAndImage from "components/TextAndImage.astro"
+import PreviousEvents from "components/PreviousEvents.astro"
+import GetTickets from "components/GetTickets.astro"
+import VenueInfo from "components/VenueInfo.astro"
+import TextAndSponsors from "components/TextAndSponsors.astro"
+import TextAndImageReverse from "components/TextAndImageReverse.astro"
+import FeaturedSpeakers from "components/FeaturedSpeakers.astro"
+import Timeline from "components/Timeline.astro"
+import Marquee from "components/Marquee.astro"
+import Cards from "components/Cards.astro"
+import CardsSponsors from "components/CardsSponsors.astro"
 
 // Images
-import Placeholder1 from "images/homepage/stats1.png";
-import Placeholder2 from "images/homepage/stats2.jpg";
-import Placeholder3 from "images/homepage/stats3.png";
-import SpotlightBlue from "images/homepage/spotlight-hg.svg";
-import Proposals from "images/homepage/hangzhou-proposals-min.jpg";
+import Placeholder1 from "images/homepage/stats1.png"
+import Placeholder2 from "images/homepage/stats2.jpg"
+import Placeholder3 from "images/homepage/stats3.png"
+import SpotlightBlue from "images/homepage/spotlight-hg.svg"
+import Proposals from "images/homepage/hangzhou-proposals-min.jpg"
 
-import GosimShanghai from "images/homepage/gosim-shanghai.png";
-import GosimDelft from "images/homepage/gosim-delft.png";
-import GosimBeijing from "images/homepage/gosim-beijing.png";
-import GosimParis from "images/homepage/gosim-paris-min.png";
+import GosimShanghai from "images/homepage/gosim-shanghai.png"
+import GosimDelft from "images/homepage/gosim-delft.png"
+import GosimBeijing from "images/homepage/gosim-beijing.png"
+import GosimParis from "images/homepage/gosim-paris-min.png"
 ---
 
 <Layout
@@ -394,11 +394,19 @@ import GosimParis from "images/homepage/gosim-paris-min.png";
       },
       {
         title: "GOSIM Conference (Shanghai)",
-        date: "September 23-24, 2023",
+        date: "September 26, 2023",
         description:
           "Where everything started, GOSIM conference and workshop focused on championing and enhancing open-source contributions.",
         image: GosimShanghai,
         link: "https://conference2023.gosim.org/",
+      },
+      {
+        title: "GOSIM Workshop (Shanghai)",
+        date: "September 23-24, 2023",
+        description:
+          "Where everything started, GOSIM workshop focused on hands-on learning and development of open-source projects.",
+        image: GosimShanghai,
+        link: "https://workshop2023.gosim.org/",
       },
     ]}
   />
