--- a/src/pages/speakers/[...name].astro
+++ b/src/pages/speakers/[...name].astro
@@ -254,4 +254,9 @@ const socialIconMap: Record<string, string> = {
   .timeslot {
     width: 8em !important;
   }
+  @media screen and (max-width: 640px) {
+    .timeslot {
+      width: 100% !important;
+    }
+  }
 </style>
