--- a/src/pages/zh/index.astro
+++ b/src/pages/zh/index.astro
@@ -169,7 +169,7 @@ import GosimParis from "images/homepage/gosim-paris-min.png";
         text: "深入了解华为的神经网络计算架构（CANN），构建高性能 AI 解决方案。",
       },
       {
-        title: "Flutter 技术沙龙",
+        title: "Flutter 全球开发者研讨会",
         text: "使用单一代码库，为移动、Web 和桌面构建美观、本地编译的应用程序。",
       },
       {
