added ppt template page to 404 smh (never again)

--- a/src/components/HeaderLanding.astro
+++ b/src/components/HeaderLanding.astro
@@ -63,7 +63,7 @@ const links = [
     ],
   },
   {
-    text: "Venue, Travel, & Visa",
+    text: "Venue, Travel, & PPT Template",
     subLinks: [
       {
         text: "Venue",
@@ -80,6 +80,10 @@ const links = [
       {
         text: "Chinese Visa",
         link: "/chinese-visa",
+      },
+      {
+        text: "PPT Template",
+        link: "/template",
       },
     ],
   },
