--- a/src/components/HeaderLandingZh.astro
+++ b/src/components/HeaderLandingZh.astro
@@ -62,9 +62,18 @@ const links = [
       },
     ],
   },
-  {
-    text: "会议地点",
-    link: "/zh/venue",
+    {
+    text: "会议地点 & PPT 模版",
+    subLinks: [
+      {
+        text: "会议地点",
+        link: "/zh/venue",
+      },
+      {
+        text: "PPT 模版",
+        link: "/template",
+      },
+    ],
   },
   // {
   //   text: "常见问题",
