--- a/src/pages/speakers-culture-tour.astro
+++ b/src/pages/speakers-culture-tour.astro
@@ -30,7 +30,7 @@ import Layout from "layouts/LayoutLanding.astro";
           <div class="activity-card">
             <div class="activity-header">
               <h3>06:30 Hotel Gathering</h3>
-              <p>Meet at Hangzhou Bucking Hotel lobby, proceed to West Lake together</p>
+              <p>Meet at Hangzhou Platinum Hanjue Hotel lobby, proceed to West Lake together</p>
             </div>
           </div>
           
