--- a/src/pages/zh/speakers/[...name].astro
+++ b/src/pages/zh/speakers/[...name].astro
@@ -144,13 +144,12 @@ const socialIconMap: Record<string, string> = {
         <div class="col-speaker">
           <div class="row-speaker">
             {
-              speaker?.image &&
-                images[`/public/images/speakers/${speaker.image}`] && (
+              speaker?.image && (
                   <div class="speaker-detail-image">
                     <Picture
-                      src={images[`/public/images/speakers/${speaker.image}`]()}
+                      src={images[`/public/images/speakers/${(speaker.image || '').replace(/^.*[\\\/]/, '')}`]()}
                       formats={["webp", "jpg"]}
-                      alt={speaker.name}
+                      alt={speaker.name || ''}
                       class="speaker-detail-image"
                       widths={[275, 400, 500, 600, 750, 900]}
                       sizes="(max-width: 700px) 58vw, 450px"
